--- a/index.html
+++ b/index.html
@@ -24,51 +24,75 @@
             </div>
             <div class="menu">
                 <nav>
-                    <ul>
+                    <ul class="beat">
                         <li>
-                            <a href="#">GUITARS</a>
+                            <a href="#">
+                                GUITARS
+                                <div class="i"></div>
+                                <div class="k"></div>
+                            </a>
                             <ul class="sub">
-                                <li><a href="#">기타1</a></li>
-                                <li><a href="#">기타2</a></li>
-                                <li><a href="#">기타3</a></li>
-                                <li><a href="#">기타4</a></li>
-                                <li><a href="#">기타5</a></li>
-                                <li><a href="#">기타6</a></li>
+                                <li><a href="#">Stratocaster</a></li>
+                                <li><a href="#">Telecaster</a></li>
+                                <li><a href="#">Jaguar</a></li>
+                                <li><a href="#">Jazzmaster</a></li>
+                                <li><a href="#">Strat-Tele</a></li>
+                                <li><a href="#">Mustang</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">ACOUSTICS</a>
+                            <a href="#">
+                                ACOUSTICS
+                                <div class="i"></div>
+                                <div class="k"></div>
+                            </a>
                             <ul class="sub">
-                                <li><a href="#">기타1</a></li>
-                                <li><a href="#">기타2</a></li>
-                                <li><a href="#">기타3</a></li>
-                                <li><a href="#">기타4</a></li>
-                                <li><a href="#">기타5</a></li>
-                                <li><a href="#">기타6</a></li>
+                                <li><a href="#">ACOUSTASONIC</a></li>
+                                <li><a href="#">Dreadnought</a></li>
+                                <li><a href="#">Concert</a></li>
+                                <li><a href="#">Parlor</a></li>
+                                <li><a href="#">Malibu</a></li>
+                                <li><a href="#">Newporter</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">BASSES</a>
+                            <a href="#">
+                                BASSES
+                                <div class="i"></div>
+                                <div class="k"></div>
+                            </a>
                             <ul class="sub">
-                                <li><a href="#">베이스1</a></li>
-                                <li><a href="#">베이스2</a></li>
-                                <li><a href="#">베이스3</a></li>
+                                <li><a href="#">Jazz Bass</a></li>
+                                <li><a href="#">Mustang Bass</a></li>
+                                <li><a href="#">Jaguar Bass</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">AMPS</a>
+                            <a href="#">
+                                AMPS
+                                <div class="i"></div>
+                                <div class="k"></div>
+                            </a>
                             <ul class="sub">
                                 <li><a href="#">VIEW ALL></a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">AUDIO</a>
+                            <a href="#">
+                                AUDIO
+                                <div class="i"></div>
+                                <div class="k"></div>
+                            </a>
                             <ul class="sub">
                                 <li><a href="#">VIEW ALL></a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">PARTS</a>
+                            <a href="#">
+                                PARTS
+                                <div class="i"></div>
+                                <div class="k"></div>
+                            </a>
                             <ul class="sub">
                                 <li><a href="#">VIEW ALL></a></li>
                             </ul>
@@ -266,22 +290,20 @@
                                             <div class="box_circle"></div>
                                             <div class="box_move m4">
                                                 <div class="box_fade">
-                                                    <img src="img/music.png" alt="아메리칸 오리지날60s 재규어" style="opacity: 0.6;">
+                                                    <img src="img/music.png" alt="숀 멘데스 파운데이션 뮤직마스터" style="opacity: 0.6;">
                                                 </div>
                                             </div> <!--box_move m4 끝-->
                                         </div> <!--box_hover 끝-->
                                     </div>  <!--box_img 끝-->
                                     <div class="box_txt t4">
-                                        <h1>AMERICAN ORIGINAL<br>
-                                            '60S JAGUAR®</h1>
-                                        <p>Never resting in our mission to<br>
-                                            make life better for musicians,<br>
-                                            we created the short-scale Jaguar guitar in 1962.<br>
-                                            Originally released as our feature-rich,<br>
-                                            top-of-the-line electric guitar,<br>
-                                            it inspired the heroes of the musical underground<br>
-                                            and hit its stride with surf, punk<br>
-                                            and alternative guitarists.</p>
+                                        <h1>Shawn Mendes<br>
+                                            Foundation Musicmaster®</h1>
+                                        <p>The Shawn Mendes Foundation Musicmaster®<br>
+                                            is a unique combination of exquisite vintage art<br>
+                                            and classic Fender tone.<br>
+                                            Adorned with a fan's rendition of a striking<br>
+                                            floral design, this highly personal take on the popular<br>
+                                            60s short-scale model features an alder body</p>
                                     </div> <!--box_txt 끝-->
                                 </a>
                             </li>
@@ -298,16 +320,12 @@
                                         </div> <!--box_hover 끝-->
                                     </div>  <!--box_img 끝-->
                                     <div class="box_txt t5">
-                                        <h1>AMERICAN ORIGINAL<br>
-                                            '60S JAGUAR®</h1>
-                                        <p>Never resting in our mission to<br>
-                                            make life better for musicians,<br>
-                                            we created the short-scale Jaguar guitar in 1962.<br>
-                                            Originally released as our feature-rich,<br>
-                                            top-of-the-line electric guitar,<br>
-                                            it inspired the heroes of the musical underground<br>
-                                            and hit its stride with surf, punk<br>
-                                            and alternative guitarists.</p>
+                                        <h1>30TH ANNIVERSARY<br>
+                                            SCREAMADELICA</h1>
+                                        <p>Primal Scream’s 1991 breakthrough album “Screamadelica”<br>
+                                            featured a fresh blend of indie-rock songwriting<br>
+                                            and acid house inspired production, propelling<br>
+                                            the Scottish rock ‘n’ roll band to international stardom.</p>
                                     </div> <!--box_txt 끝-->
                                 </a>
                             </li>
@@ -324,16 +342,14 @@
                                         </div> <!--box_hover 끝-->
                                     </div>  <!--box_img 끝-->
                                     <div class="box_txt t6">
-                                        <h1>AMERICAN ORIGINAL<br>
-                                            '60S JAGUAR®</h1>
-                                        <p>Never resting in our mission to<br>
-                                            make life better for musicians,<br>
-                                            we created the short-scale Jaguar guitar in 1962.<br>
-                                            Originally released as our feature-rich,<br>
-                                            top-of-the-line electric guitar,<br>
-                                            it inspired the heroes of the musical underground<br>
-                                            and hit its stride with surf, punk<br>
-                                            and alternative guitarists.</p>
+                                        <h1>TROUBLEMAKER TELE®<br>
+                                            DELUXE BIGSBY®</h1>
+                                        <p>All dressed up and ready to brawl – the Troublemaker<br>
+                                            Tele® Deluxe Bigsby® is elegant in black.<br>
+                                            Dressed in a classic lacquer finish, a stately ebony<br>
+                                            fingerboard and elevated by pearloid block inlays<br>
+                                            and white binding throughout, this guitar<br>
+                                            presents a dashing figure, ready to do some damage.</p>
                                     </div> <!--box_txt 끝-->
                                 </a>
                             </li>
@@ -367,18 +383,29 @@
                 <div class="s4_btn">
                     <a href="#">GET STARTED</a>
                 </div>
-                <video data-autoplay loop muted>
+                <video data-autoplay loop muted class="v1">
+                    <source src="img/fenderplay.mp4" type="video/mp4">
+                </video>
+                <video autoplay loop muted class="v2">
                     <source src="img/fenderplay.mp4" type="video/mp4">
                 </video>
             </div> <!--s4 끝-->
 
             <div class="section" id="s5">
-                <h1>Fender Gallery</h1>
+                <div class="GT"><a href="#"><h1>Fender Gallery</h1></a></div>
                 <div class="gallery">
-                    <div class="g1"></div>
-                    <div class="g2"></div>
-                    <div class="g3"></div>
-                    <div class="g4"></div>
+                    <div class="g1 gi">
+                        <div class="border"><h3>Stratocaster</h3></div>
+                    </div>
+                    <div class="g2 gi">
+                        <div class="border"><h3>Jaguar</h3></div>
+                    </div>
+                    <div class="g3 gi">
+                        <div class="border"><h3>Telecaster</h3></div>
+                    </div>
+                    <div class="g4 gi">
+                        <div class="border"><h3>Stratocaster</h3></div>
+                    </div>
                 </div>
             </div> <!--s5 끝-->
 
